--- a/index.html
+++ b/index.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Trivia</title>
+    <title>Friends Trivia</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
+
 <body>
-    <strong>Totally Trivia Time!</strong>
-    <button id=start>Start</button>
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="container d-flex justify-content-between">
+            <a href="#" class="navbar-brand d-flex align-items-center">
+                <strong>Trivia Time!</strong>
+            </a>
+        </div>
+    </div>
 
     <div>
-        <h3 id="time-left">Time left:</h3> 
-    </div> 
-    
-    <p id="wins">Wins:</p>
-    <p id="losses">Losses:</p>
+        <section class="jumbotron text-center">
+            <div class="container">
+                <img src="assets/images/logo.png" width="270" height="50" class="d-inline-block align-top"
+                    alt="friends">
+                <p>
+                    <br>
+                    <br>
+                    <button type="button" id="start" class="btn btn-outline-secondary">Start Game</button>
+                </p>
+                <br>
+                <p class="lead text-muted">
+                    <h3 id="time-left"></h3>
+                    <div id="questions"></div>
+                    <p id="wins"></p>
+                    <p id="losses"></p>
+
+            </div>
+        </section>
+    </div>
+
+
+
 
 
 
     <script src="assets/javascript/app.js"></script>
 </body>
+
 </html>
