adding done button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
 
     <div>
+        
         <section class="jumbotron text-center">
             <div class="container">
                 <img src="assets/images/logo.png" width="270" height="50" class="d-inline-block align-top"
@@ -34,15 +35,14 @@
                 <p class="lead text-muted">
                     <h3 id="time-left"></h3>
                     <div id="questions"></div>
+                    <br>
+                    <button type="button" id="done" class="btn btn-outline-secondary">Done!</button>
                     <p id="wins"></p>
                     <p id="losses"></p>
 
             </div>
         </section>
     </div>
-
-
-
 
 
 
